Fixed overflowing text in Server Select

--- a/src/site/src/styles/components/_select.scss
+++ b/src/site/src/styles/components/_select.scss
@@ -62,6 +62,7 @@
       grid-area: label;
       text-overflow: ellipsis;
       white-space: nowrap;
+      width: 100%;
     }
   }
 }
